# xege-ffi

./: Cargo.toml  README.md  build.rs
examples/: demo.rs
libpng/include/: pngpriv.h  pngstruct.h
libpng/src/: pnglibconf.c
src/: lib.rs
xege/src/: egegapi.cpp
zlib/include/: gzguts.h  zutil.h
zlib/src/: uncompr.c
